--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	implementation 'com.auth0:java-jwt:3.18.2' 
+	implementation 'com.auth0:java-jwt:3.18.2'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.5.0'
 	
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	implementation 'software.amazon.awssdk:s3:2.20.147'
