--- a/.github/workflows/test-for-local-vm.yaml
+++ b/.github/workflows/test-for-local-vm.yaml
@@ -57,4 +57,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/$REPOSITORY:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.REPOSITORY }}:latest
