--- a/.github/workflows/aws-eks-actions.yaml
+++ b/.github/workflows/aws-eks-actions.yaml
@@ -59,6 +59,7 @@ jobs:
             docker push $REGISTRY_URI:$IMAGE_TAG
 
   argocd:
+    environment: aws-eks-test
     needs: ci
     runs-on: ubuntu-latest
 
