--- a/manifest/eks-app.yaml
+++ b/manifest/eks-app.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: t2-project2-pod
-          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/t2-yeeryong:latest
+          image: 727646470302.dkr.ecr.ap-northeast-2.amazonaws.com/t2-yeeryong:b4dded141836b54a4abe8b4a526b512d8e3205f3
 
 ---
 
