--- a/manifest/eks-app.yaml
+++ b/manifest/eks-app.yaml
@@ -42,7 +42,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
-#    alb.ingress.kubernetes.io/certificate-arn:  # HTTPS용 인증서 ARN (선택)
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:727646470302:certificate/dadb9abd-980e-4d38-bb41-45c236e24ce2
     alb.ingress.kubernetes.io/load-balancer-name: t2-eks-app-alb
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     alb.ingress.kubernetes.io/success-codes: "200-399"
