--- a/.github/workflows/aws-eks-actions.yaml
+++ b/.github/workflows/aws-eks-actions.yaml
@@ -67,7 +67,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: ${{ github.repository }}
-          ref: feature-aws-test
+          ref: ${{ github.ref_name }}
           token: ${{ secrets.T2_YEERYONG_GITHUB_TOKEN }}
 
       - name: Update Image with New SHA
@@ -76,8 +76,8 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --local user.email "amber.lee.020100@gmail.com"
-          git config --local user.name "amberlee0201"
+          git config user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
+          git config --local user.name "${{ github.actor }}"
           git add .
           git commit -m "[CI/CD Automated] Update spring boot image to latest"
           git push
