--- a/.github/workflows/aws-eks-actions.yaml
+++ b/.github/workflows/aws-eks-actions.yaml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   ci:
-    if: github.event.pull_request.merged == true || github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     environment: aws-eks-test
     runs-on: ubuntu-latest
 
@@ -61,7 +61,7 @@ jobs:
             docker push $REGISTRY_URI:$IMAGE_TAG
 
   argocd:
-    if: github.event.pull_request.merged == true || github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     environment: aws-eks-test
     needs: ci
     runs-on: ubuntu-latest
