--- a/.github/workflows/aws-eks-actions.yaml
+++ b/.github/workflows/aws-eks-actions.yaml
@@ -1,10 +1,5 @@
 name: CI Test for AWS EKS
 on:
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - 'manifest/**' # 특정 디렉토리 무시
   pull_request:
     branches:
       - main
@@ -13,7 +8,7 @@ on:
 
 jobs:
   ci:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    if: github.event.pull_request.merged == true  # PR이 merge된 경우만 실행
     environment: aws-eks-test
     runs-on: ubuntu-latest
 
@@ -61,7 +56,7 @@ jobs:
             docker push $REGISTRY_URI:$IMAGE_TAG
 
   argocd:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+    if: github.event.pull_request.merged == true  # PR이 merge된 경우만 실행
     environment: aws-eks-test
     needs: ci
     runs-on: ubuntu-latest
