--- a/.github/workflows/aws-eks-actions.yaml
+++ b/.github/workflows/aws-eks-actions.yaml
@@ -1,14 +1,13 @@
 name: CI Test for AWS EKS
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types:
-      - closed  # PR이 병합될 때 실행
+    paths-ignore:
+      - 'manifest/**' # 특정 디렉토리 무시
 
 jobs:
   ci:
-    if: github.event.pull_request.merged == true  # PR이 merge된 경우만 실행
     environment: aws-eks-test
     runs-on: ubuntu-latest
 
@@ -56,7 +55,6 @@ jobs:
             docker push $REGISTRY_URI:$IMAGE_TAG
 
   argocd:
-    if: github.event.pull_request.merged == true  # PR이 merge된 경우만 실행
     environment: aws-eks-test
     needs: ci
     runs-on: ubuntu-latest
